# food-assistant

./: LICENSE  README.md
iac/: docker-compose.yaml
modules/core-api/: package.json
modules/core-api/src/: index.ts
modules/core-api/src/modules/assistant/: assistant.controller.ts  assistant.service.ts
modules/core-api/src/modules/weaviate/: weaviate.service.ts
modules/embedder/: Dockerfile  pyproject.toml
modules/embedder/src/: main.py
modules/embedder/tests/: test_main.py
modules/rag-pipeline/: .gitignore  pyproject.toml
modules/rag-pipeline/src/: config.py  main.py
