[project]
name = "food-assistant-embedder"
version = "0.1.0"
description = "Food Assistant Embedder"
authors = [
    { name = "Denys Nykoriak", email = "denys.nykoriak@gmail.com" }
]
requires-python = ">=3.14.0"
dependencies = [
  "fastapi[standard]>=0.129.2",
  "sentence-transformers>=5.2.3",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
